--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "georgia-roleplay-community-bot",
   "version": "1.0.0",
-  "description": "Official Georgia Roleplay Community Discord Bot",
-  "main": "index.js",
+  "description": "Official bot for Georgia Roleplay Community",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "node-cron": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
